--- a/public/Styles.css
+++ b/public/Styles.css
@@ -17,7 +17,7 @@ box-shadow: 0 0 10px rgba(0,0 0,0.5);
 background-color: #fff;
 padding: 20px;
 width:500px;
-max-height: 600px;
+max-height: 1000px;
 margin-inline: auto;
 margin:20px;
 }
@@ -90,5 +90,11 @@ cursor: pointer;
     margin-bottom: 10px;
     font-size: 16px;  
 }
+.useractivity h2{
+    display: none;
+}
 
 
+
+
+ 
