--- a/public/Styles.css
+++ b/public/Styles.css
@@ -93,6 +93,28 @@ cursor: pointer;
 .useractivity h2{
     display: none;
 }
+#successMessage{
+    display: none;
+}
+.seeactivity{
+    width: 100%;
+    background-color: green;
+    padding: 10px 40px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+   
+    text-align: center;
+    border-radius: 30px;
+    cursor: pointer; 
+    display: none;
+}
+.seeactivity a{
+    color: #fff !important;
+    text-decoration: none;
+    font-size: 18px;
+}
 
 
 
